Bug 14825 - "{client,server} smb3 {signing,encryption} algorithms" should use the same strings as smbstatus output
Summary: "{client,server} smb3 {signing,encryption} algorithms" should use the same st...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.15.0rc5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-08 13:15 UTC by Stefan Metzmacher
Modified: 2021-09-13 13:46 UTC (History)
3 users (show)

See Also:


Attachments
Patch for 4.15 cherry-picked from master (7.97 KB, patch)
2021-09-08 16:48 UTC, Ralph Böhme
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2021-09-08 13:15:59 UTC
It's seems to be confusing that the values specified in
"{client,server} smb3 {signing,encryption} algorithms" use different
values than the output of smbstatus shows.
Comment 1 Samba QA Contact 2021-09-08 16:38:03 UTC
This bug was referenced in samba master:

867c6ff9f3f28ab4bfa0cb1660889f3f5be0d111
Comment 2 Ralph Böhme 2021-09-08 16:48:07 UTC
Created attachment 16796 [details]
Patch for 4.15 cherry-picked from master
Comment 3 Jule Anger 2021-09-10 13:47:04 UTC
Pushed to autobuild-v4-15-test.
Comment 4 Samba QA Contact 2021-09-10 14:55:14 UTC
This bug was referenced in samba v4-15-test:

33f06d10a03a3e51fe0774491f73a392471f4f81
Comment 5 Jule Anger 2021-09-13 06:35:33 UTC
Closing out bug report.

Thanks!
Comment 6 Samba QA Contact 2021-09-13 13:46:54 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.0rc7):

33f06d10a03a3e51fe0774491f73a392471f4f81